Bug 1168004: Part1. Ensure buffered range referential starts at 0. r=bholley